[Redux] add redux to project

--- a/pages/css/login.css
+++ b/pages/css/login.css
@@ -16,3 +16,10 @@
   margin-top: 20px !important;
   width: 50%;
 }
+
+.login__spinner {
+  display: block;
+  z-index: 100;
+  margin: 0px auto;
+  position: absolute;
+}
