--- a/pages/css/sidebar.css
+++ b/pages/css/sidebar.css
@@ -2,4 +2,49 @@
   text-align: center;
   font-size: 1.15rem;
   padding: 10px;
+  color: white;
+}
+
+.sidebar__list {
+  list-style-type: none;
+
+  margin: 60px 0 0 0;
+  padding: 0;
+}
+
+.sidebar__list-item {
+  display: flex;
+  align-items: center;
+
+  padding: 15px 15px;
+  cursor: pointer;
+  transition: all 0.1s;
+  color: white;
+}
+.warning {
+  color: #ffff00;
+}
+
+.sidebar__list-item > span {
+  font-size: 1rem;
+}
+
+.sidebar__list-item:hover {
+  background: rgba(0, 0, 0, 0.1);
+}
+
+.sidebar__list-item-active:not(.hover) {
+  background: white;
+  color: #2196f3;
+  border-radius: 30px 0 0 30px;
+  font-weight: 650;
+}
+
+.sidebar__sign-out {
+  text-align: center;
+  margin: 40px 0;
+  cursor: pointer;
+}
+.sidebar__sign-out:hover {
+  text-decoration: underline;
 }
