--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -17,6 +17,7 @@
   flex-direction: column;
   padding: 10px 20px;
 }
+
 .loadingPage {
   position: relative;
   background-color: rgba(0, 0, 0, 0.25);
@@ -36,14 +37,31 @@
 
 .sidebar {
   min-height: 100vh;
-  background-color: red;
+  box-sizing: border-box;
+  color: white;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.pageContent {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  align-items: center;
+}
+
+.notification {
+  background-color: #2196f3;
+  min-height: 10vh;
+  width: 100%;
 }
 
 .container {
-  min-height: 100vh;
-  padding: 0 0.5rem;
+  min-height: 90vh;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  align-items: flex-start;
+  width: 100%;
 }
