--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -10,7 +10,7 @@
   background: white;
   min-height: 50vh;
   width: 30%;
-  border-radius: 10px;
+  border-radius: 5px;
   box-shadow: 5px 5px 5px #888888;
   align-items: center;
   display: flex;
@@ -64,4 +64,20 @@
   display: flex;
   align-items: flex-start;
   width: 100%;
+  flex-direction: column;
+  overflow: hidden;
+}
+
+.total {
+  color: #b1aeae;
+  margin-left: 20px;
+  font-size: 1rem;
+}
+
+.searchBox {
+  display: flex;
+  border: 1px solid black;
+  border-radius: 25px;
+  justify-content: space-between;
+  padding-left: 10px;
 }
