--- a/styles/restaurant.css
+++ b/styles/restaurant.css
@@ -1,12 +1,3 @@
-.container__title {
-  font-size: 1.2rem;
-  font-weight: 600;
-  border-bottom: 2px solid black;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-}
-
 .restaurant-container {
   width: 100%;
   padding: 10px;
@@ -18,11 +9,14 @@
 .restaurant-table__head tr th {
   padding: 8px;
 }
-
+.restaurant-table__body tr td {
+  padding: 8px;
+}
 .restaurant-table-filter {
   margin-left: 10px;
   padding: 5px;
   border: none;
+  cursor: pointer;
 }
 
 .restaurant-table-status {
@@ -41,6 +35,13 @@
   background-color: white;
   display: flex;
   align-items: center;
+  cursor: pointer;
+}
+
+.contract-restaurant-link {
+  text-decoration: underline;
+  color: blue;
+  cursor: pointer;
 }
 
 .restaurant-table-show-more {
