--- a/styles/restaurant.css
+++ b/styles/restaurant.css
@@ -6,11 +6,20 @@
   flex-direction: column;
 }
 
+.city-filter {
+  border: 1px solid rgba(0, 0, 0, 0.7);
+  margin-left: 10px;
+  padding: 5px;
+  cursor: pointer;
+}
+
 .restaurant-table__head tr th {
   padding: 8px;
+  min-width: 70px;
 }
 .restaurant-table__body tr td {
   padding: 8px;
+  word-wrap: break-word;
 }
 .restaurant-table-filter {
   margin-left: 10px;
