--- a/assets/css/listReport.css
+++ b/assets/css/listReport.css
@@ -21,3 +21,24 @@
   display: block;
   width: 100%;
 }
+
+.info-overlay {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  display: flex;
+  -webkit-box-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+
+  color: rgb(255, 255, 255);
+  font-size: 1.4rem;
+  line-height: 16px;
+  font-weight: 300;
+  text-align: center;
+  z-index: 2;
+  background-color: rgba(0, 0, 0, 0.5);
+}
